[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/Enemy/SkullHead/SkullHead.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Enemy/SkullHead/Basic Enemy sheet.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 24.5242, 32 )

[sub_resource type="Animation" id=2]

length = 0.7
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 3, 4, 5, 7, 8 ]
}

[sub_resource type="Animation" id=3]

length = 0.35
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.96875, 0.238403, 0.238403, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Particles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false ]
}

[sub_resource type="Curve" id=4]

min_value = -360.0
max_value = 360.0
bake_resolution = 100
_data = [ Vector2( 0.00398663, 15.4688 ), 0.0, 2407.48, 0, 0, Vector2( 0.239776, -278.438 ), 0.0, 0.0, 0, 0, Vector2( 0.403485, 360 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]

flags = 4
width = 2048
curve = SubResource( 4 )

[sub_resource type="Curve" id=6]

min_value = 0.0
max_value = 100.0
bake_resolution = 100
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.429141, 33.8867 ), 0.0, 0.0, 0, 0, Vector2( 0.64294, 88.6719 ), 1582.7, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]

flags = 4
width = 2048
curve = SubResource( 6 )

[sub_resource type="Curve" id=8]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0.00154321, 1 ), 0.0, 0.155969, 0, 0, Vector2( 0.258102, 0.392578 ), -2.93092, -2.93092, 0, 0, Vector2( 0.667374, 0.435547 ), 0.0, 0.0, 0, 0, Vector2( 0.910494, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]

flags = 4
width = 2048
curve = SubResource( 8 )

[sub_resource type="Curve" id=10]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.721129, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=11]

flags = 4
width = 2048
curve = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=12]

render_priority = 0
trail_divisor = 1
trail_size_modifier = SubResource( 11 )
emission_shape = 1
emission_sphere_radius = 16.0
flag_align_y = true
flag_rotate_y = true
flag_disable_z = true
spread = 180.0
flatness = 0.0
gravity = Vector3( 0, -98, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
damping_curve = SubResource( 7 )
angle = 720.0
angle_random = 1.0
angle_curve = SubResource( 5 )
scale = 7.0
scale_random = 0.0
scale_curve = SubResource( 9 )
color = Color( 1, 0, 0, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angle", "Emission Shape", "Initial Velocity", "Spread", "Trail" ]

[sub_resource type="RectangleShape2D" id=13]

custom_solver_bias = 0.0
extents = Vector2( 20, 30 )

[node name="SkullHead" type="KinematicBody2D" groups=[
"Enemy",
]]

input_pickable = false
collision_layer = 4
collision_mask = 5
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Pickable", "Transform", "collision" ]

[node name="Sprite" type="Sprite" parent="." index="0"]

editor/display_folded = true
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
vframes = 3
hframes = 3
_sections_unfolded = [ "Animation", "Offset", "Transform", "Visibility" ]

[node name="floor_dec" type="RayCast2D" parent="Sprite" index="0"]

position = Vector2( 13.3333, 0 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 25 )
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( -0.629395, -2.51755 )
shape = SubResource( 1 )

[node name="Stun" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.25
one_shot = false
autostart = false

[node name="Anim" type="AnimationPlayer" parent="." index="3"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Normal = SubResource( 2 )
anims/Stun = SubResource( 3 )
blend_times = [  ]

[node name="Particles2D" type="Particles2D" parent="." index="4"]

position = Vector2( 0, -23.3333 )
scale = Vector2( 0.916667, 1 )
z_index = 3
emitting = false
amount = 50
lifetime = 0.75
one_shot = false
preprocess = 0.0
speed_scale = 2.0
explosiveness = 1.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 12 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time", "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Hitbox" type="Area2D" parent="." index="5" groups=[
"Enemy",
]]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 8
collision_mask = 8
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox" index="0"]

shape = SubResource( 13 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="." index="6"]

visible = false
position = Vector2( 246.759, 150.388 )
scale = Vector2( -5.94666, -3.66667 )
rect = Rect2( -10, -10, 100, 100 )
pause_animations = true
freeze_bodies = true
pause_particles = false
pause_animated_sprites = true
process_parent = false
physics_process_parent = false

[connection signal="timeout" from="Stun" to="." method="_on_Stun_timeout"]

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]


